# summarizer

./: .gitignore  stack.yaml  summarizer.cabal
app/: Main.hs
src/NLP/: Summarizer.hs
src/NLP/Summarizer/: Arguments.hs  Article.hs  Dictionary.hs  Grader.hs  Highlighter.hs  Sentence.hs  Stemmer.hs  Term.hs
