name:                summarizer
version:             0.1.0.0
synopsis:            Text summarizer library, inpired by libOTS.
description:         Text summarizer library, inpired by libOTS.
homepage:            http://github.com/githubuser/summarizer#readme
license:             GPL-3
license-file:        LICENSE
author:              Alvaro García
maintainer:          Alvaro García <alvarofernandogarcia@gmail.com>
copyright:           2016
category:            Natural Language Processing, Text
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     NLP.Summarizer
  other-modules:       NLP.Summarizer.Term
                     , NLP.Summarizer.Sentence
  build-depends:       base >= 4.7 && < 5
                     , text >= 1.2.2.0 && < 1.3
  default-language:    Haskell2010

executable summarizer-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , summarizer
  default-language:    Haskell2010

test-suite summarizer-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , summarizer
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/rainbyte/summarizer
